tests/baselines/reference/superPropertyAccess2.errors.txt
==== tests/cases/compiler/superPropertyAccess2.ts (4 errors) ====
    class C {
        public static foo() { }
        public get x() {
            return 1;
        }
    
        public static bar() { }
    }
    
    class D extends C {
        public static foo() {
            super.bar(); // error
            super.x;  // error
                  ~
!!! superPropertyAccess2.ts(13,15): error TS2094: The property 'x' does not exist on value of type 'typeof C'.
        }    
    
        constructor() {
            super();
            super.bar(); // error
                  ~~~
!!! superPropertyAccess2.ts(18,15): error TS2094: The property 'bar' does not exist on value of type 'C'.
            super.x;  // error
                  ~
!!! superPropertyAccess2.ts(19,15): error TS2166: Only public methods of the base class are accessible via the 'super' keyword.
        }
    
        public static get y() {
            super.bar(); // error
            super.x; // error
                  ~
!!! superPropertyAccess2.ts(24,15): error TS2094: The property 'x' does not exist on value of type 'typeof C'.
            return 1;
        }
    }